--- a/IDCA.Client/MainWindow.xaml
+++ b/IDCA.Client/MainWindow.xaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IDCA.Client"
+        xmlns:mvvm="clr-namespace:IDCA.Mvvm" 
+        d:DataContext="{d:DesignInstance Type=mvvm:NotificationObject}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="IBM DataCollection Automation" Height="450" Width="800">
     <Grid>
 
     </Grid>
