--- a/IDCA.Client/MainWindow.xaml
+++ b/IDCA.Client/MainWindow.xaml
@@ -6,8 +6,51 @@
         xmlns:mvvm="clr-namespace:IDCA.Mvvm" 
         d:DataContext="{d:DesignInstance Type=mvvm:NotificationObject}"
         mc:Ignorable="d"
-        Title="IBM DataCollection Automation" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="IBM DataCollection Automation" Height="450" Width="800"
+        WindowStyle="None"
+        AllowsTransparency="True"
+        ResizeMode="CanResizeWithGrip"
+        Style="{StaticResource ResourceKey=BaseStyle}">
+    <StackPanel Style="{StaticResource ResourceKey=BaseStyle}">
+        <!-- 阴影效果 -->
+        <StackPanel.Effect>
+            <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="0.5"/>
+        </StackPanel.Effect>
+        <!-- 标题栏 -->
+        <Grid Height="40">
+            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                <!-- 最小化按钮 -->
+                <Button Width="50" Height="40" VerticalAlignment="Center" Style="{StaticResource HeaderButton}">
+                    <Button.Template>
+                        <ControlTemplate>
+                            <Grid Background="Transparent">
+                                <Rectangle Width="12" Height="1.2" Fill="Black"/>
+                            </Grid>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <!-- 最大化按钮 -->
+                <Button Width="50" Height="40" VerticalAlignment="Center">
+                    <Button.Template>
+                        <ControlTemplate>
+                            <Grid Background="Transparent">
+                                <Rectangle Width="12" Height="12" Stroke="Black" StrokeThickness="1.2"/>
+                            </Grid>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <!-- 关闭按钮 -->
+                <Button Width="50" Height="40" VerticalAlignment="Center" Style="{StaticResource CloseButton}">
+                    <Button.Template>
+                        <ControlTemplate>
+                            <Grid Background="Transparent">
+                                <Line X1="19" Y1="14" X2="31" Y2="26" Stroke="Black" StrokeThickness="1.2"/>
+                                <Line X1="19" Y1="26" X2="31" Y2="14" Stroke="Black" StrokeThickness="1.2"/>
+                            </Grid>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+            </StackPanel>
+        </Grid>
+    </StackPanel>
 </Window>
