--- a/IDCA.Client/App.xaml
+++ b/IDCA.Client/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application x:Class="IDCA.Client.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:IDCA.Client"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style x:Key="BaseStyle">
@@ -9,28 +8,12 @@
                 <Setter Property="Control.Background" Value="#FFEEEEF2"/>
             </Style.Setters>
         </Style>
-        <Style x:Key="HeaderButton" TargetType="Button">
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Trigger.EnterActions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation To="WhiteSmoke" 
-                                                BeginTime="0:0:0.2" 
-                                                Duration="0:0:0.2" 
-                                                Storyboard.TargetProperty="(Border.Background).(LinearGradientBrush.GradientStops)[0].(GradientStop.Color)"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </Trigger.EnterActions>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        <Style x:Key="CloseButton" TargetType="Button">
+        <Style x:Key="HeaderButtonStyle" TargetType="Button">
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Trigger.Setters>
-                        <Setter Property="Background" Value="Red"/>
-                        <Setter Property="Foreground" Value="White"/>
+                        <Setter Property="Background" Value="White"/>
+                        <Setter Property="Opacity" Value="0.6"/>
                     </Trigger.Setters>
                 </Trigger>
             </Style.Triggers>
