--- a/IDCA.Client/App.xaml
+++ b/IDCA.Client/App.xaml
@@ -5,132 +5,8 @@
     <Application.Resources>
         <Style x:Key="BaseStyle">
             <Style.Setters>
-                <Setter Property="Control.Background" Value="#FFEEEEF2"/>
+                <Setter Property="Control.Background" Value="White"/>
             </Style.Setters>
-        </Style>
-        <Style x:Key="HeaderButtonStyle" TargetType="Button">
-            <Setter Property="Width" Value="50" />
-            <Setter Property="Height" Value="40" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Trigger.Setters>
-                        <Setter Property="Opacity" Value="0.6"/>
-                    </Trigger.Setters>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        <Style x:Key="CloseButton" BasedOn="{StaticResource ResourceKey=HeaderButtonStyle}" TargetType="Button">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Grid Background="#FFEEEEF2" Width="50" Height="40">
-                            <Line X1="19" Y1="14" X2="31" Y2="26" Stroke="Black" StrokeThickness="1.2" />
-                            <Line X1="19" Y1="26" X2="31" Y2="14" Stroke="Black" StrokeThickness="1.2" />
-                            <Grid.Triggers>
-                                <EventTrigger RoutedEvent="MouseEnter">
-                                    <EventTrigger.Actions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <ColorAnimation To="Red" Duration="0:0:0.200" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"/>
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </EventTrigger.Actions>
-                                </EventTrigger>
-                                <EventTrigger RoutedEvent="MouseLeave">
-                                    <EventTrigger.Actions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <ColorAnimation To="#FFEEEEF2" Duration="0:0:0.200" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"/>
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </EventTrigger.Actions>
-                                </EventTrigger>
-                            </Grid.Triggers>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style x:Key="MinimizeButton" BasedOn="{StaticResource ResourceKey=HeaderButtonStyle}" TargetType="Button">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Grid Background="#FFEEEEF2" Width="50" Height="40">
-                            <Rectangle Width="12" Height="1.2" Fill="Black"/>
-                            <Grid.Triggers>
-                                <EventTrigger RoutedEvent="MouseEnter">
-                                    <EventTrigger.Actions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <ColorAnimation To="White" Duration="0:0:0.200" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"/>
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </EventTrigger.Actions>
-                                </EventTrigger>
-                                <EventTrigger RoutedEvent="MouseLeave">
-                                    <EventTrigger.Actions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <ColorAnimation To="#FFEEEEF2" Duration="0:0:0.200" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"/>
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </EventTrigger.Actions>
-                                </EventTrigger>
-                                <EventTrigger RoutedEvent="MouseDown">
-                                    <EventTrigger.Actions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <ColorAnimation To="LightBlue" Duration="0:0:0.200" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"/>
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </EventTrigger.Actions>
-                                </EventTrigger>
-                            </Grid.Triggers>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style x:Key="MaximizeButton" BasedOn="{StaticResource ResourceKey=HeaderButtonStyle}" TargetType="Button">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Grid Background="#FFEEEEF2"  Width="50" Height="40">
-                            <Rectangle Width="12" Height="12" Stroke="Black" StrokeThickness="1.2"/>
-                            <Grid.Triggers>
-                                <EventTrigger RoutedEvent="MouseEnter">
-                                    <EventTrigger.Actions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <ColorAnimation To="White" Duration="0:0:0.200" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"/>
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </EventTrigger.Actions>
-                                </EventTrigger>
-                                <EventTrigger RoutedEvent="MouseLeave">
-                                    <EventTrigger.Actions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <ColorAnimation To="#FFEEEEF2" Duration="0:0:0.200" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"/>
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </EventTrigger.Actions>
-                                </EventTrigger>
-                                <EventTrigger RoutedEvent="MouseDown">
-                                    <EventTrigger.Actions>
-                                        <BeginStoryboard>
-                                            <Storyboard>
-                                                <ColorAnimation To="LightBlue" Duration="0:0:0.200" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"/>
-                                            </Storyboard>
-                                        </BeginStoryboard>
-                                    </EventTrigger.Actions>
-                                </EventTrigger>
-                            </Grid.Triggers>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
         </Style>
     </Application.Resources>
 </Application>
