--- a/IDCA.Client/MainWindow.xaml
+++ b/IDCA.Client/MainWindow.xaml
@@ -2,32 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:mvvm="clr-namespace:IDCA.Mvvm" 
-        d:DataContext="{d:DesignInstance Type=mvvm:NotificationObject}"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
+        d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="IBM DataCollection Automation" Height="450" Width="800"
-        WindowStyle="None"
-        AllowsTransparency="True"
-        ResizeMode="CanResizeWithGrip"
-        Closing="Window_Closing"
+        Title="" Height="400" Width="600"
         Style="{StaticResource ResourceKey=BaseStyle}">
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <!-- 标题栏 -->
-            <StackPanel Height="40" Style="{StaticResource ResourceKey=BaseStyle}" MouseDown="Window_MouseDown" VerticalAlignment="Top">
-                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                    <!-- 最小化按钮 -->
-                    <Button Style="{StaticResource MinimizeButton}" Click="MinimizeButton_OnClick" />
-                    <!-- 最大化按钮 -->
-                    <Button Style="{StaticResource MaximizeButton}" Click="MaximizeButton_OnClick" />
-                    <!-- 关闭按钮 -->
-                    <Button Style="{StaticResource CloseButton}" Click="CloseButton_OnClick" />
-                </StackPanel>
-            </StackPanel>
-            <Grid>
-                
-            </Grid>
-        </StackPanel>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
     </Grid>
 </Window>
